Web SPA: Attempt to fix word-break issue on FF mobile & menu overflow problem

--- a/src/clients/web-spa/src/components/header/Header.module.scss
+++ b/src/clients/web-spa/src/components/header/Header.module.scss
@@ -76,6 +76,7 @@ ul.LinkPanel{
     padding-left: 0;
     list-style-type: none;
     display: block;
+    overflow-x: hidden;
     @include horizontal-line();
     margin-bottom: 10px;
 
